Fixed the layout of view_request for student side

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -369,7 +369,7 @@ input[type=number] {
 }
 
 .grid-container.wide-gap{
-    gap: 5rem;
+    gap: 2rem;
     width: clamp(30%, 80%, 100%);
 }
 
